Postgre integration and accordion changes

--- a/superset-frontend/package.json
+++ b/superset-frontend/package.json
@@ -155,6 +155,7 @@
     "query-string": "^6.13.7",
     "re-resizable": "^6.6.1",
     "react": "^16.13.1",
+    "react-accessible-accordion": "^5.0.0",
     "react-ace": "^9.4.4",
     "react-checkbox-tree": "^1.5.1",
     "react-color": "^2.13.8",
@@ -171,6 +172,7 @@
     "react-lines-ellipsis": "^0.15.0",
     "react-loadable": "^5.5.0",
     "react-markdown": "^4.3.1",
+    "react-querybuilder": "^4.5.1",
     "react-redux": "^7.2.0",
     "react-resize-detector": "^6.7.6",
     "react-reverse-portal": "^2.0.1",
