--- a/superset-frontend/package.json
+++ b/superset-frontend/package.json
@@ -202,6 +202,7 @@
     "rison": "^0.1.1",
     "scroll-into-view-if-needed": "^2.2.28",
     "shortid": "^2.2.6",
+    "sql-formatter": "^8.2.0",
     "stream-browserify": "^3.0.0",
     "urijs": "^1.19.8",
     "use-immer": "^0.6.0",
